= Changelog

== 0.6.3 - unreleased

== 0.6.2 - 2025-01-11

* Wird der Konnektor über Cocard gebootet, ist der Status WARNING (gelb) und wird mit dem Reboot-Datum angegeben, bis der Konnektor wieder ok ist.
* Fehlermeldungen enthalten jetzt den Code und Zusatzangaben, falls der Konnektor solche liefert (gemSpec_OM 3.2.1 Feld Detail)
* Kartenterminal mit IP = 0.0.0.0 hat jetzt den Status UNKNOWN

== 0.6.1 - 2024-12-24

* Neu: Reboot von KoCoBox-Konnektoren
* Geschütze Information wird erst nach Userinteraktion angezeigt (bei Karte und Konnektor).
* Dokumentation für Konnektoren ergänzt

== 0.6.0 - 2024-12-14

* Update auf Rails 7.2
* Konfigurationscheck prüft beim Konnektor, ob der Port für SDS und der SOAP-Port erreichbar sind.

== 0.5.0 - 2024-12-08

* Neu: xref:admin/connector-edit.adoc#_authentifikation_per_userpasswort[Client-Authentifikation am Konnektor mit User/Passwort] (alternativ zum Client-Zertifikat)
* Fix: Löschen von Objekten mit verbesserter Fehlermeldung
* Einzelne Logs auf ungültig setzen (bisher nur alle veralteten Logs auf einmal)

== 0.4.7 - 2024-11-30

* Fix: Clientzertifikat P12-Import jetzt auch mit Legacy-Formaten möglich, 
  sofern openssl -legacy das Format unterstützt (OpenSSL-Version 3.x). Kocoboxen erzeugen noch P12 in einem Legacy-Format.
* Update TI-Lagebild-Button
* Logeinträge: neue Funktion veraltete Logeinträge auf ungültig setzen

== 0.4.6 - 2024-11-08

* Fix: Einzelanzeige Kontext zeigt jetzt die Tabellen Konnektoren/Karten korrekt.
* Update PIN-Status nach PIN-Verify, um die Änderung unmittelbar anzuzeigen.
* Anzeige Arbeitsplätze überarbeitet; Löschfunktion für veraltete Arbeitsplätze
* Dokumentation für Arbeitsplätze ergänzt
* Verbesserung TI-Lagebild: Unterscheidung zwischen Teil- (WARNING) und Totalausfall eines Dienstes (CRITICAL)


== 0.4.5 - 2024-11-02

* Neu: xref:user/ti-lagebild.adoc[TI-Lagebild]: Anzeige von Störungen der 
  Telematik-Infrastruktur