@@ -201,6 +201,18 @@
 <article class="doc">
 <h1 class="page">Changelog</h1>
 <div class="sect1">
+<h2 id="_0_6_3_unreleased"><a class="anchor" href="#_0_6_3_unreleased"></a>0.6.3 - unreleased</h2>
+<div class="sectionbody">
+<div class="ulist">
+<ul>
+<li>
+<p>Workflow für die PIN-Verifizierung aller Karten eines Terminals verbessert.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="_0_6_2_2025_01_11"><a class="anchor" href="#_0_6_2_2025_01_11"></a>0.6.2 - 2025-01-11</h2>
 <div class="sectionbody">
 <div class="ulist">
